# rjqls

./: Cargo.toml  rustfmt.toml
src/: ast_eval.rs  input.rs  lib.rs  main.rs  src_reader.rs  value.rs
src/builtins/: builtin.jq  rjqls_builtins.jq
src/interpreter/: ast_eval.rs  bind_var_pattern.rs  generator.rs  mod.rs
src/interpreter/ast_eval/: builtins.rs  math.rs  mod.rs  regex.rs
src/parser/: ast.rs  ast_jq_printer.rs  expr_ast.rs  jq.pest  mod.rs  pratt_expr.rs
tests/: bad_include.jq  log-line-parser.jq  shopping_list.jq  test_ast_interpreter.rs  test_include.jq
